# FinCrime-env

./: .gitignore  CHANGELOG.md  COMPLIANCE.md  Dockerfile  README.md  TODO.md  cases.json  env.py  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run_smoke_tests.bat  test_grader1.json  validate_submission.py
.github/workflows/: validate.yml
graders/: task1_grader.py  task2_grader.py  task3_grader.py
scripts/: remove_tracked_env.bat  remove_tracked_env.sh
server/: app.py
static/: index.html
tests/: test_env.py
