[project]
name = "fincrime-env"
version = "1.0.0"
description = "AI Financial Crime Investigation Environment — OpenEnv Compatible"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "openenv-core>=0.2.0",
    "huggingface-hub>=0.20.0",
    "requests>=2.31.0",
    "python-multipart>=0.0.6",
]

[project.scripts]
server = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]